# HideDesktopApps

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  README.adoc  README.md  build.rs  config.ini  hide_desktop.py  install_and_run.bat  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: installer.iss
hide_desktop_apps/: __init__.py  __main__.py  app.py
hide_desktop_apps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scoop/: HideDesktopApps.json
src/: config.rs  discord.rs  hotkeys.rs  icons.rs  log_util.rs  main.rs  notifications.rs  profiles.rs  startup.rs  state.rs  taskbar.rs  tray.rs  updater.rs  win_ops.rs
src/ui/: about_tab.rs  discord_tab.rs  general_tab.rs  hotkeys_tab.rs  mod.rs  notifications_tab.rs  profiles_tab.rs  startup_tab.rs  updater_tab.rs
winget/manifests/l/Londopy/HideDesktopApps/1.0.0/: Londopy.HideDesktopApps.installer.yaml  Londopy.HideDesktopApps.locale.en-US.yaml  Londopy.HideDesktopApps.yaml
