[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hide-desktop-apps"
version = "0.4.0"
description = "Windows system-tray app to hide/show desktop icons, taskbar, and all windows via hotkeys"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
authors     = [{ name = "Londopy", email = "ropesim@pxdmail.com" }]
keywords = ["windows", "desktop", "tray", "hotkey", "wallpaper", "icons", "taskbar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dependencies = [
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "pywin32>=306",
]

[project.urls]
Homepage   = "https://github.com/Londopy/HideDesktopApps"
Repository = "https://github.com/Londopy/HideDesktopApps"
Changelog  = "https://github.com/Londopy/HideDesktopApps/blob/main/CHANGELOG.md"

[project.scripts]
hide-desktop-apps = "hide_desktop_apps.__main__:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["hide_desktop_apps*"]
